desktop layout, delete button visibility, checked task bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,11 +5,10 @@
 :root {
 	/* forms border radius value */
 	--f-b-r: 5px;
+
 	--forms-width: 70%;
 	--forms-margin-bottom: 1rem;
-
 	--primary-bright-blue: hsl(220, 98%, 61%);
-
 	--very-light-gray: hsl(0, 0%, 98%);
 	--very-light-grayish-blue: hsl(236, 33%, 92%);
 	--light-grayish-blue: hsl(233, 11%, 84%);
@@ -147,6 +146,12 @@ INPUTS
 	align-content: center;
 	align-items: center;
 }
+.single-task button {
+	visibility: hidden;
+}
+.single-task:hover > button {
+	visibility: visible;
+}
 .single-task > div {
 	display: flex;
 }
@@ -156,7 +161,6 @@ INPUTS
 	justify-content: space-evenly;
 }
 .tasks-filter label {
-	font-weight: bold;
 	font-size: 1.2rem;
 	position: relative;
 }
@@ -177,7 +181,7 @@ input[type="radio"] {
 	background-color: blue;
 }
 .single-task {
-	border-bottom: 1px solid lightgray;
+	border-bottom: 2px solid var(--very-light-gray);
 	display: flex;
 	justify-content: space-between;
 	font-size: 0.85rem;
@@ -190,30 +194,59 @@ input[type="radio"] {
 	display: flex;
 }
 .add-item-form > div {
-	/* position: absolute; */
-	/* content: url("./../images/icon-check.svg"); */
 	content: "";
 	margin-right: 0.5rem;
 	padding: 10px;
-	border: 1px solid grey;
+	border: 1px solid var(--light-grayish-blue);
 	width: 1rem;
 	height: 1rem;
 	border-radius: 100%;
 }
-
 input[type="checkbox"] {
 	appearance: none;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	padding: 10px;
 	background-color: white;
-	border: 1px solid grey;
+	border: 1px solid var(--light-grayish-blue);
 	width: 1rem;
 	height: 1rem;
 	border-radius: 100%;
 	margin-right: 0.5rem;
 	position: relative;
 }
+/* cursors */
+.single-task-done label {
+	cursor: default;
+}
+button:hover,
+input[type="radio"],
+input[type="checkbox"]:hover,
+.single-task label {
+	cursor: pointer;
+}
+input[type="checkbox"]:hover {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 1.1rem;
+	border-color: white;
+	background-image: linear-gradient(
+		to bottom right,
+		hsl(192, 100%, 67%),
+		hsl(280, 87%, 65%)
+	);
+}
+input[type="checkbox"]:hover:after {
+	display: block;
+	content: "";
+	background-color: white;
+	/* border: 1px solid red; */
+	border-radius: 100%;
+	color: white;
+	padding: 9px;
+}
+input[type="checkbox"]:hover,
 input[type="checkbox"]:checked {
 	background: linear-gradient(
 		to right bottom,
@@ -232,42 +265,6 @@ input[type="checkbox"]:checked:before {
 	right: -5px;
 	width: 100%;
 	height: 100%;
-}
-/* .single-task-done {
-	text-decoration: line-through;
-	color: var(--light-grayish-blue);
-} */
-/* cursors */
-.single-task-done label {
-	cursor: default;
-}
-input[type="checkbox"]:hover {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	border-color: white;
-	background-image: linear-gradient(
-		to bottom right,
-		hsl(192, 100%, 67%),
-		hsl(280, 87%, 65%)
-	);
-}
-input[type="checkbox"]:hover:after {
-	display: block;
-	content: "";
-
-	background-color: white;
-	border: 0px solid red;
-	border-radius: 100%;
-	color: white;
-	padding: 9px;
-}
-button:hover,
-input[type="radio"],
-input[type="checkbox"]:hover,
-.single-task label {
-	cursor: pointer;
 }
 /* 
 BUTTONS 
@@ -308,5 +305,26 @@ button:focus {
 footer {
 	margin-top: 20rem;
 }
-
-/* .toggle-dark-theme {} */
+@media screen and (min-width: 1440px) {
+	header {
+		background-image: url("./../images/bg-desktop-light.jpg");
+		min-height: 40vh;
+	}
+	header > div,
+	main {
+		width: 33%;
+		margin: 0 auto;
+	}
+	header > div {
+		margin-top: 5rem;
+	}
+	main {
+		top: 10rem;
+	}
+	.add-item-form {
+		margin-bottom: 1.5rem;
+	}
+	.tasks-state {
+		font-size: 0.75rem;
+	}
+}
